feat: services endpoint
