# data/openapi/v1.yml
@@ -200,6 +200,30 @@ paths:
           $ref: '#/components/responses/422'
         '500':
           $ref: '#/components/responses/500'
+  /services:
+    get:
+      summary: Get a list of services
+      operationId: getServices
+      tags: ['Services']
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Services found
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Service'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '500':
+          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     bearerAuth:
@@ -282,6 +306,37 @@ components:
             $ref: '#/components/schemas/Problem'
       description: Request was not processed due to an internal server error
   schemas:
+    Service:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: string
+          description: The unique identifier for the service
+        userId:
+          type: string
+          description: The unique identifier for the user who owns this service
+          nullable: true
+        name:
+          type: string
+          description: The name of the service
+        description:
+          type: string
+          description: The description of the service
+          nullable: true
+        createdAt:
+          type: string
+          format: date-time
+          description: The date and time the service was created
+        updatedAt:
+          type: string
+          format: date-time
+          description: The date and time the service was last updated
+      required:
+        - id
+        - name
+        - createdAt
+        - updatedAt
     Vehicle:
       type: object
       additionalProperties: false
